--- a/public/css/login.css
+++ b/public/css/login.css
@@ -16,6 +16,26 @@ body{
     background-size: cover;
         background-position: center;
 }
+
+.alert {
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+ }
+ 
+ .alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+ }
+ 
+ .alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+ }
 .box{
     position: relative;
     width: 380px;
