--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -19,7 +19,7 @@
     background-size: cover;
     color: black;
     text-align: center;
-    height: 300px;
+    height: 370px;
   }
   
   header h1 {
@@ -84,7 +84,19 @@
     transition: cubic-bezier(0.165, 0.84, 0.44, 1) 1s;
   }
   
-  
+  .btn-buat{
+    cursor: pointer;
+    border-radius: .5rem;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    margin-left: 1500px;
+    margin: -100px;
+    position: absolute;
+    background:black;
+    color: pink;
+    text-decoration: none;
+    transition: cubic-bezier(0.165, 0.84, 0.44, 1) 1s;
+  }
   .btn {
     
     cursor: pointer;
