--- a/public/css/css_edit.css
+++ b/public/css/css_edit.css
@@ -21,7 +21,9 @@ body{
    text-decoration: none;
    text-transform: capitalize;
 }
-
+label{
+   font-size: 20px;
+}
 html{
    font-size: 62.5%;
    overflow-x: hidden;
