--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,6 +156,11 @@ span {
 
 .about {
     background-color: #f9f9f9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh; /* Untuk vertikal centering */
+    padding: 20px;
 }
 
 .about p {
@@ -165,19 +170,25 @@ span {
     margin-bottom: 20px;
     max-width: 800px;
     margin-left: auto;
-    text-align: justify;
     margin-right: auto;
+    text-align: justify;
 }
 
 .about h1 {
-    padding: 30px;
+    padding: 30px 0;
     font-size: 50px;
-    text-align: justify;
+    text-align: center;
+}
+
+.about .container {
+    max-width: 800px;
 }
 
 .about .row {
     display: flex;
     flex-direction: column;
+    align-items: center; 
+    text-align: center;
 }
 
 .about .col {
@@ -186,8 +197,8 @@ span {
 
 .img-responsive-about {
     max-width: 100%;
-    height: 320px;
-    width: auto;
+    height: auto;
+    width: 500px; 
     margin-top: 10px;
 }
 
